--- a/简易部署.md
+++ b/简易部署.md
@@ -33,9 +33,9 @@ EXIT;
 
 ```
 cd /opt
-sudo git clone https://github.com/your-username/library-system.git
-sudo chown -R $USER:$USER library-system
-cd library-system
+sudo git clone https://github.com/687jsassd/-Bit-p2-Library.git
+sudo chown -R $USER:$USER -Bit-p2-Library
+cd -Bit-p2-Library
 ```
 
 ### 4. 设置 Python 环境
